# tractian-case

./: .coverage  .env.example  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
src/: conftest.py  main.py
src/models/: customer_models.py  tracOS_models.py
src/models/tests/: test_customer_models.py  test_tracos_models.py
src/modules/: inbound.py  outbound.py
src/repositories/: repository_factory.py  workorder_repository.py
src/repositories/mongo/: mongo_workorder_repository.py
src/repositories/tests/: test_repository_factory.py
src/service/: workorder_service.py
src/service/tests/: test_workorder_service.py
src/tests/: test_end_to_end.py  test_inbound_pipeline.py  test_outbound_pipeline.py
